# resiliency-demo

./: .gitignore  README.md  argo.yaml  wadm.yaml
.github/workflows/: cloud-hello.yml  digitalocean-metadata.yml  fly-io-metadata.yml  gcp-metadata.yml  kind-metadata.yml  provider.yml
cloud-hello/: .gitignore  Cargo.toml  README.md  build.rs  wasmcloud.toml
cloud-hello/src/: helpers.rs  lib.rs
cloud-hello/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
cloud-hello/ui/src/: cycleAnimation.ts  dataTable.ts  index.ts  style.css
cloud-hello/ui/src/data/: codes.ts  example.ts
cloud-hello/wit/: deps.toml  world.wit
cloud-metadata/: README.md  imports.md  metadata-service.md
cloud-metadata/wit/: metadata.wit  world.wit
deploy/base/: deployment.yaml  pvc.yaml
deploy/fly/nats/: nats.conf  run
deploy/k8s/: kustomization.yaml
digitalocean-metadata/: Cargo.toml  wasmcloud.toml
digitalocean-metadata/src/: main.rs
digitalocean-metadata/wit/: provider.wit
fly-hello/: Cargo.toml  wadm.yaml  wasmcloud.toml
fly-hello/src/: lib.rs
fly-hello/wit/: deps.toml  world.wit
fly-io-metadata/: Cargo.toml  Makefile  README.md  out  provider_test_config.toml  wasmcloud.toml
fly-io-metadata/keys/: dan_account.nk  fly_io_metadata_service.nk
fly-io-metadata/src/: main.rs
fly-io-metadata/wit/: deps.toml  provider.wit
fly-metadata/: Makefile  codegen.toml  metadata.smithy
fly-metadata/rust/: Cargo.toml
fly-metadata/rust/src/: lib.rs  metadata.rs
gcp-metadata/: Cargo.toml  wasmcloud.toml
gcp-metadata/src/: main.rs
gcp-metadata/wit/: provider.wit
kind-metadata/: .gitignore  Cargo.toml  README.md  wasmcloud.toml
kind-metadata/src/: main.rs
machine/: Dockerfile
machine/nats/: nats.conf  run
machine/wasmcloud/: run
