[package]
name = "cloud-hello"
edition = "2021"
version = "0.6.1"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = {version = "0.7", default-features = false}
handlebars = "5"
http = "1"
rust-embed = "8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["rt"]}
tower-service = "0.3"
url = "2"
wit-bindgen = { version = "0.24", features = ["default"] }
woothee = "0.13.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
