[package]
name = "digitalocean-metadata"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1"
hostname = "0.3"
reqwest = {version = "0.12", default-features = false, features = ["json"]}
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
wasmcloud-provider-sdk = "0.4"
wit-bindgen-wrpc = "0.3"

[[bin]]
name = "digitalocean_metadata"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
