[package]
name = "http-hello-world"
edition = "2021"
version = "0.4.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
fly-metadata = { path = "../fly-metadata/rust" }
handlebars = "5"
rust-embed = "8"
serde = "1"
serde_json = "1"
tokio = {version = "1", features = ["rt"]}
url = "2"
wasmbus-rpc = { version = "0.15"}
wit-bindgen = { version = "0.16", features = ["default"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
