[package]
name = "fly-hello"
edition = "2021"
version = "0.6.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
handlebars = "5"
rust-embed = "8"
serde = "1"
serde_json = "1"
tokio = {version = "1", features = ["rt"]}
url = "2"
wit-bindgen = { version = "0.24", features = ["default"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
