[package]
name = "fly-io-metadata"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
fly-metadata = { path = "../fly-metadata/rust" }
flytrap = { git = "https://github.com/protochron/flytrap", branch = "fix_requirements", default-features = false, features = ["dns", "regions", "detect", "http"] }
hostname = "0.3"
tracing = "0.1"
wasmbus-rpc = { version = "0.15", features = ["otel"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.9"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "fly_io_metadata"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
