[package]
name = "kind-metadata"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1"
hostname = "0.3"
tracing = "0.1"
tokio = { version = "1", features = [ "full" ] }
wasmcloud-provider-sdk = "0.4"
wit-bindgen-wrpc = "0.3"

[[bin]]
name = "kind_metadata"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
